crates/axiom-macros/tests/compile-fail/cf-guard-missing-layer.rs
#[axiom_macros::guard]
struct MissingLayerGuard;

fn main() {}
