crates/axiom-macros/tests/compile-fail/cf-guard-missing-layer.stderr
error: Guard requires a `layer = "..."` attribute (e.g. exec, validate, agent, oversight)
 --> tests/compile-fail/cf-guard-missing-layer.rs:2:8
  |
2 | struct MissingLayerGuard;
  |        ^^^^^^^^^^^^^^^^^
